# dotpacks

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/setup-rs/: action.yaml  cleanup.yaml
.github/workflows/: cleanup.yaml  conventional-pr-title.yaml  rust-checks.yaml
dotpacks/: Cargo.toml
dotpacks/src/: lib.rs
dotpacks/src/package/: mod.rs  name.rs  version.rs
dotpacks/src/runner/: mod.rs
