[package]
name = "dotpacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
