[package]
name = "dotpacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.76"
dyn_ord = "0.2.1"
erased-serde = "0.4.1"
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
